<resources>
    <string name="app_name">Parchut</string>
    <string name="Login">Login</string>

    <!-- menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_log_out">Log Out</string>

    <!-- buttons names and hints -->
    <string name="create_account_btn">Create New Account</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Sign in</string>
    <string name="email_address_editText_hint">Email Address</string>
    <string name="name_editText_hint">Name</string>
    <string name="password_editText_hint">Password</string>
    <string name="submit_btn">Submit</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ok">OK</string>
    <string name="grant">Grant</string>
    <string name="cancel">Cancel</string>
    <string name="origin">Starting Point</string>
    <string name="destination">Destination</string>
    <string name="current_location">Current location</string>
    <string name="trip_info_btn">Add Trip Info</string>
    <string name="search_filter_button">Add Search Filters</string>
    <string name="add_rules">Add rules</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="gender">Gender:</string>
    <string name="chat">Chatting:</string>
    <string name="allowed">Allowed</string>
    <string name="not_allowed">Not allowed</string>
    <string name="welcomed">Welcomed</string>
    <string name="not_welcomed">Not welcomed</string>
    <string name="cursing">Cursing:</string>
    <string name="smoking">Smoking:</string>
    <string name="driving_style">Driving style:</string>
    <string name="music">Music:</string>
    <string name="disabled">Disabled</string>
    <string name="set_trip_info">Set Trip Info</string>
    <string name="time">Starting Time</string>
    <string name="date">Date</string>
    <string name="from_date">From:</string>
    <string name="until_date">Until:</string>
    <string name="none">Not Specified</string>
    <string name="zero">0</string>
    <string name="label">Label</string>
    <string name="label_text">From %1$s to %2$s</string>
    <string name="cost_min_max">Cost from %1$d to %2$d</string>
    <string name="cost_min_val">Minimum cost: %1$d</string>
    <string name="cost_max_val">Maximum cost: %1$d</string>

    <string name="post_label">Post label</string>
    <string name="label_hint">Ex: From Eiffel Tower to Moulin Rouge</string>
    <string name="route_details">Route details</string>
    <string name="details_hint">Your route steps</string>
    <string name="seats_hint">The number of vacant seats</string>
    <string name="seats">Available seats</string>
    <string name="transportation_dialogue_title">Transportation Type</string>
    <string name="transportation_model_hint">Ex: BMW, Honda, Ford</string>
    <string name="transportation_service_hint">Ex: Uber, Lyft, Careem, Gett</string>
    <string name="transportation_service_title">Service:</string>
    <string name="transportation_boat_hint">Ex: Yacht, Motorboat, Jet Ski </string>
    <string name="transportation_texi_hint">Ex: Public, Limousine , Airport </string>
    <string name="transportation_Bus_hint">Ex: Bus, Minibus, Truck </string>
    <string name="music_genre_hint">Ex: Rock, Pop, Jazz</string>
    <string name="type_title">Type:</string>
    <string name="model_title">Model:</string>
    <string name="genre_title">Favorite genres:</string>
    <string name="music_tolerance">Tolerance:</string>
    <string name="music_dialogue_title">Music Tolerance</string>
    <string name="cost_dialogue_title">Trip cost</string>
    <string name="cost_editText_hint">Cost that will be divided between participants</string>
    <string name="cost_floatingLabel">Local currency</string>
    <string name="distance_duration">Distance = %1$d Km | duration = %2$s</string>
    <string name="cost_min">Minimum Cost</string>
    <string name="cost_max">Maximum Cost</string>



    <!-- Warning messages and Toast -->
    <string name="auth_failed">Login Failed</string>
    <string name="error">An error occurred</string>
    <string name="register_failed">Creating new user failed</string>
    <string name="empty_email_password">You must enter a valid email and password</string>
    <string name="empty_email_name">You must enter a name and a valid email</string>
    <string name="signing_up_progress">Signing up in progress&#8230;</string>
    <string name="signing_in_progress">Signing in&#8230;</string>
    <string name="submitting_in_progress">Submitting&#8230;</string>
    <string name="required">Required</string>
    <string name="password_must_be_six">Password must be at least 6 characters</string>
    <string name="email_is_not_valid">A valid email is required</string>
    <string name="name_must_be_two">Name must be 2 characters at least</string>
    <string name="submit_profile_error">Sorry, couldn\'t submit your profile.</string>
    <string name="me">Me</string>
    <string name="permission_denied">Permission to get your current location denied</string>
    <string name="location_access_required">Location access is required to determine a starting point.</string>
    <string name="access_location">Current location access</string>
    <string name="location_unavailable">Permission denied.</string>
    <string name="permission_not_granted">We are sorry, we cannot access this feature until you grant us permission.</string>
    <string name="permission_not_granted_title">Permission not granted</string>
    <string name="route_error">Error: </string>
    <string name="route_try_again">Something went wrong, try again.</string>
    <string name="add_successfully">Your post has been added successfully.</string>

    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="no_more_trips">No more trips</string>
    <string name="no_trips_found">No trips found</string>

    <string name="see_new_post">See %1$d new trip</string>
    <string name="see_new_posts">See %1$d new trips</string>
    <string name="search_failed">Sorry, your search failed, try again.</string>

    <!-- Warning messages and Toast -->

    <string name="title_activity_profile">Profile</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- invite -->
    <string name="menu_invite">Invite Friends</string>
    <string name="invitation_title">Suggest to friends</string>
    <string name="invitation_message">Hi! this app is great</string>
    <string name="invitation_deep_link" translatable="false">https://hrnm2.app.goo.gl/parchut</string>
    <string name="invitation_custom_image">https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png</string>
    <string name="invitation_cta">Install</string>
    <string name="invitation_failed">Sorry, we couldn\'t sent the invitation to your friends.</string>
    <string name="google_play_services_error">Connection failed.</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>
    <string name="invitation_id_fmt" formatted="false">Invitation ID: %s</string>

    <string name="deep_link_congratulation">Congratulations! you got invited</string>
    <string name="deep_link_welcome_text">You may now try the app.</string>

    <string name="sent_invitations_fmt" formatted="false">Sent %d invitations</string>
    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="title_activity_maps">Map</string>
    <!-- invite -->


    <!-- Time -->

    <string name="day">%d day</string>
    <string name="days">%d days</string>
    <string name="hour">%d hour</string>
    <string name="hours">%d hours</string>
    <string name="minute">%d minute</string>
    <string name="minutes">%d minutes</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="dow_sun_short">Su</string>
    <string name="dow_mon_short">Mo</string>
    <string name="dow_tue_short">Tu</string>
    <string name="dow_wed_short">We</string>
    <string name="dow_thu_short">Th</string>
    <string name="dow_fri_short">Fr</string>
    <string name="dow_sat_short">Sa</string>
    <string name="dow_sun">Sunday</string>
    <string name="dow_mon">Monday</string>
    <string name="dow_tue">Tuesday</string>
    <string name="dow_wed">Wednesday</string>
    <string name="dow_thu">Thursday</string>
    <string name="dow_fri">Friday</string>
    <string name="dow_sat">Saturday</string>
    <string name="no_repeats">No repeats</string>
    <string name="everyday">Every day</string>
    <string name="weekdays">Weekdays</string>
    <string name="weekends">Weekends</string>
    <!-- Time -->

    <!-- Transportation type array -->
    <string name="private_car">Private car</string>
    <string name="ride_sharing">Ride sharing service</string>
    <string name="taxi">Taxi</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="bus">Bus</string>
    <string name="boat">Boat</string>


    <string name="private_car_and_model">Private car: %1$s</string>
    <string name="ride_sharing_and_model">Ride sharing service: %1$s</string>
    <string name="taxi_and_model">Taxi: %1$s</string>
    <string name="motorcycle_and_model">Motorcycle: %1$s</string>
    <string name="bus_and_model">Bus: %1$s</string>
    <string name="boat_and_model">Boat: %1$s</string>

    <!-- Transportation type array -->

    <!-- gender array -->
    <string name="any">Any</string>
    <string name="females">Females only</string>
    <string name="males">Males only</string>
    <string name="both_men_women">Both are welcomed</string>

    <!-- gender type array -->

    <!-- music array -->
    <string name="no_music">No Music</string>
    <string name="driver">My playlist only</string>
    <string name="other_drivers">Driver\'s playlist only</string>
    <string name="passenger">Passenger\'s playlist allowed</string>
    <!-- music array -->

    <!-- driving array -->
    <string name="safe_driving">Safe driving</string>
    <string name="rash_driving">Rash driving</string>
    <!-- driving array -->

    <!-- sorting array -->
    <string name="start_sooner">Starts sooner</string>
    <string name="start_later">Starts later</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="lowest_cost">Lowest cost</string>
    <string name="highest_cost">Highest cost</string>
    <string name="title_activity_search">Map</string>
    <!-- sorting array -->

</resources>
