<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:padding="20dp">

    <TextView
        android:id="@+id/typeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/music_tolerance"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />


    <Spinner
        android:id="@+id/music_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/music"
        app:layout_constraintBaseline_toBaselineOf="@+id/typeText"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/genre_editText" />

    <TextView
        android:id="@+id/modelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/genre_title"
        app:layout_constraintLeft_toLeftOf="@+id/typeText"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/typeText" />

    <EditText
        android:id="@+id/genre_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/music_genre_hint"
        android:inputType="textCapSentences"
        android:maxLines="1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/modelText"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/modelText"
        android:layout_marginLeft="8dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
